header + responive menu

--- a/index.html
+++ b/index.html
@@ -11,8 +11,31 @@
 </head>
 
 <body>
-  <h2>sadsadas</h2>
-  <a href="">asd</a>
+  <div id="bg-video"></div>
+  <div class="header-intro-wrapper">
+    <header class="header">
+      <div class="header-logo">
+        <a href="#"><img src="./src/images/Logo.png" alt="verFides"></a>
+      </div>
+      <nav class="header-nav">
+        <ul class="nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Managment</a></li>
+          <li><a href="#">Resources</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Client Area</a></li>
+        </ul>
+      </nav>
+      <div class="header-menu-holder">
+          <div class="opener">
+              <span></span>
+              <span></span>
+              <span></span>
+          </div>  
+      </div>  
+    </header>
+  </div>
   <script src="assets/js/vendor.min.js" defer></script>
   <script src="assets/js/app.js" defer></script>
 </body>
