--- a/index.html
+++ b/index.html
@@ -2,42 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>verFides</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway|Open+Sans:300,300i,400,400i,600,700" rel="stylesheet">
-  <link media="all" rel="stylesheet" href="assets/css/vendor.min.css">
-  <link media="all" rel="stylesheet" href="assets/css/style.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>verFides</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Open+Sans:300,300i,400,400i,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+    <link media="all" rel="stylesheet" href="assets/css/vendor.min.css">
+    <link media="all" rel="stylesheet" href="assets/css/style.min.css">
 </head>
 
 <body>
-  <div id="bg-video"></div>
-  <div class="header-intro-wrapper">
-    <header class="header">
-      <div class="header-logo">
-        <a href="#"><img src="./src/images/Logo.png" alt="verFides"></a>
-      </div>
-      <nav class="header-nav">
-        <ul class="nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Managment</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Client Area</a></li>
-        </ul>
-      </nav>
-      <div class="header-menu-holder">
-          <div class="opener">
-              <span></span>
-              <span></span>
-              <span></span>
-          </div>  
-      </div>  
-    </header>
-  </div>
-  <script src="assets/js/vendor.min.js" defer></script>
-  <script src="assets/js/app.js" defer></script>
+    <div class="header-intro-wrapper">
+        <div class="background-video">
+            <div id="bg-video"></div>
+        </div>
+        <header class="header">
+            <div class="header-logo">
+                <a href="#"><img src="./src/images/Logo.png" alt="verFides"></a>
+            </div>
+            <nav class="header-nav">
+                <ul class="nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Managment</a></li>
+                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Client Area</a></li>
+                </ul>
+            </nav>
+            <div class="header-menu-holder">
+                <div class="opener">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </header>
+        <div class="button-holder">
+            <a href="" class="scroll-down"><i class="fas fa-arrow-down"></i></a>
+        </div>
+    </div>
+    <div class="welcome-wrapper">
+        <section class="welcome">
+            <h2>asdasdasdas</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nulla sed laboriosam ducimus temporibus deleniti ratione aliquam odit. Tempore quae neque, voluptates suscipit earum dolore obcaecati ratione laudantium incidunt doloribus?</p>
+        </section>
+    </div>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a><a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a><a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+    <a href="#" class="button">See All <i class="fas fa-arrow-right fa-fw"></i></a>
+
+    <div class="swiper-container" style="margin: auto 0">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper" style="width: 600px">
+            <!-- Slides -->
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+        </div>
+        <!-- If we need pagination -->
+
+        <!-- If we need navigation buttons -->
+
+        <!-- If we need scrollbar -->
+    </div>
+    <script src="assets/js/vendor.min.js" defer></script>
+    <script src="assets/js/app.js" defer></script>
 </body>
 
 </html>
